--- a/src/sass/components/buttons.scss
+++ b/src/sass/components/buttons.scss
@@ -1,7 +1,8 @@
 @import '../_variables.scss';
 .btn-login {
     padding: 0.5rem 1rem;
-    min-width: 30%;
+    min-width: 90%;
+    height: 40px;
     border-radius: 6px;
     border: none;
     background-color: $btn-background-color;
@@ -11,7 +12,8 @@
 
 .btn-login:active {
     padding: 0.5rem 1rem;
-    min-width: 30%;
+    min-width: 90%;
+    height: 40px;
     border-radius: 6px;
     border: none;
     background-color: $btn-background-color-active;
